--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/blur": "^3.6.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
+    "aws-amplify": "^4.3.4",
+    "aws-amplify-react-native": "^5.0.5",
     "expo": "~42.0.1",
+    "expo-react-native-shadow": "^1.0.3",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
