--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/blur": "^3.6.0",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/netinfo": "^7.1.2",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
+    "@react-navigation/stack": "^6.0.11",
     "aws-amplify": "^4.3.7",
     "aws-amplify-react-native": "^6.0.1",
     "expo": "~42.0.1",
